Fix bug : toolbar doesn't work on ie8

--- a/apps/multivio/english.lproj/main.css
+++ b/apps/multivio/english.lproj/main.css
@@ -513,6 +513,14 @@ label.document-label-view {
   /*filter : alpha(opacity=10);*/
 }
 
+.mvo-front-view-invisible {
+  z-index: 10000;
+  opacity : 0.0;
+  moz-opacity : 0.0;
+  ms-filter: "alpha(opacity=0)"; /* IE 8 */
+  filter : alpha(opacity=0);
+}
+
 .mvo-front-view-transparent {
   z-index: -10000;
   background: sc_static("images/transparency_ddd_90.png") repeat;
